src/objects/Leg__c.object
<CustomObject>
    <description>This is used for flight legs.</description>
    <fields>
        <fullName>AP_to_Challenge_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP to Challenge Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>Trip_Manager_Number__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <inlineHelpText>This is a red sky formula field that controls sharing permissions for communities</inlineHelpText>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Flight_Time_Interchange_Ratio__c</fullName>
        <formula>IF(ISBLANK(Interchange_Ratio__c),  Billed_Flight_Time__c , 0+ Billed_Flight_Time__c / Interchange_Ratio__c)</formula>
        <label>Actual Billed Flight Time Pre-Exchange R</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Flight_Time_hours__c</fullName>
        <label>Actual Flight Time (hours)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_QC_Notes__c</fullName>
        <label>Additional QC Notes</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_of_Passenger_Destination__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Address of Passenger Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Hours_Category_Color__c</fullName>
        <inlineHelpText>This is for clients that we bill after hours</inlineHelpText>
        <label>After Hours Category Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_Hours_Description_Category__c</fullName>
        <inlineHelpText>Used for clients that we bill for after-hours</inlineHelpText>
        <label>After Hours Description Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flights During Regular Business Hours</fullName>
                </value>
                <value>
                    <fullName>Flights outside Business hours</fullName>
                </value>
                <value>
                    <fullName>Pre-Check on Weekends</fullName>
                </value>
                <value>
                    <fullName>Weekend Flights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_Hours__c</fullName>
        <label>After Hours</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aircraft_Change_Reason__c</fullName>
        <label>Aircraft Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Mechanical</fullName>
                </value>
                <value>
                    <fullName>Aircraft Owner Pulled Aircraft</fullName>
                </value>
                <value>
                    <fullName>Crewing</fullName>
                </value>
                <value>
                    <fullName>Operational Challenges</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Cleaning__c</fullName>
        <label>Aircraft Cleaning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aircraft_Comment__c</fullName>
        <description>AvP Internal Feedback regarding Aircraft</description>
        <label>Aircraft Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_MELs__c</fullName>
        <label>Aircraft MELs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No MELs</fullName>
                </value>
                <value>
                    <fullName>Air Conditioning</fullName>
                </value>
                <value>
                    <fullName>Air Show</fullName>
                </value>
                <value>
                    <fullName>APU</fullName>
                </value>
                <value>
                    <fullName>Entertainment System</fullName>
                </value>
                <value>
                    <fullName>Heat</fullName>
                </value>
                <value>
                    <fullName>Lav Inop</fullName>
                </value>
                <value>
                    <fullName>Lav Sink</fullName>
                </value>
                <value>
                    <fullName>Seat(s) Inop</fullName>
                </value>
                <value>
                    <fullName>Tray Table(s)</fullName>
                </value>
                <value>
                    <fullName>Water System</fullName>
                </value>
                <value>
                    <fullName>WiFi Inop</fullName>
                </value>
                <value>
                    <fullName>Window Shades</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Passed_Safety_Check__c</fullName>
        <label>Aircraft Passed Safety Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Requested_Formula__c</fullName>
        <formula>IF(CONTAINS(TEXT( Aircraft_Requested__c  ),&quot;Lear&quot;),&quot;Lear&quot;,
IF(CONTAINS(TEXT( Aircraft_Requested__c  ),&quot;Global&quot;),&quot;Global&quot;,
TEXT( Aircraft_Requested__c  )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Requested Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Requested__c</fullName>
        <label>Aircraft Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Score__c</fullName>
        <description>AvP Internal Feedback regarding Aircraft</description>
        <label>Aircraft Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Tail_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Tail Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Inactive Tail</errorMessage>
            <filterItems>
                <field>Aircraft__c.Aircraft_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Aircraft__c.Name</field>
                <operation>contains</operation>
                <value>TBD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Transactions (Aircraft Tail Number)</relationshipLabel>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_Formula__c</fullName>
        <formula>IF(CONTAINS(TEXT(  Aircraft_Tail_Number__r.Aircraft_Type__c  ),&quot;Lear&quot;),&quot;Lear&quot;,
IF(CONTAINS(TEXT( Aircraft_Tail_Number__r.Aircraft_Type__c   ),&quot;Global&quot;),&quot;Global&quot;,
TEXT( Aircraft_Tail_Number__r.Aircraft_Type__c   )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <formula>TEXT(Aircraft_Tail_Number__r.Aircraft_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_in_Position__c</fullName>
        <label>Aircraft in Position?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_staying_with_passengers__c</fullName>
        <label>Aircraft staying with passengers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Comment__c</fullName>
        <description>AvP Internal Feedback regarding Airport</description>
        <label>Airport Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Post__c</fullName>
        <label>Airport Feasibility - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Low volume flight activity; not limited by airport operating hours</fullName>
                </value>
                <value>
                    <fullName>2. Medium Volume Flight Activity or Potential Airport Operating Hours Concerns</fullName>
                </value>
                <value>
                    <fullName>3. High Volume Flight Activity and Very Real Airport Operating Hours Concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Sc_Post__c</fullName>
        <label>Airport Feasibility (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Score__c</fullName>
        <label>Airport Feasibility (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_W_Post__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Feasibility (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_W_Sc_Post__c</fullName>
        <formula>Airport_Feasibility_W_Post__c  * Airport_Feasibility_Sc_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Feasibility (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Feasibility (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Weighted_Score__c</fullName>
        <formula>Airport_Feasibility_Score__c * Airport_Feasibility_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Feasibility (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility__c</fullName>
        <label>Airport Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Low volume flight activity; not limited by airport operating hours</fullName>
                </value>
                <value>
                    <fullName>2. Medium Volume Flight Activity or Potential Airport Operating Hours Concerns</fullName>
                </value>
                <value>
                    <fullName>3. High Volume Flight Activity and Very Real Airport Operating Hours Concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Score__c</fullName>
        <description>AvP Internal Feedback regarding Airport</description>
        <label>Airport Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Post__c</fullName>
        <label>Airport Weather History - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Airport is not traditionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>2. Airport is occasionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>3. Airport is highly sensitive and often impacted by poor weather.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Sc_Post__c</fullName>
        <label>Airport Weather History (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Score__c</fullName>
        <label>Airport Weather History (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_W_Post__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Weather History (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Weather History (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History__c</fullName>
        <label>Airport Weather History</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Airport is not traditionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>2. Airport is occasionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>3. Airport is highly sensitive and often impacted by poor weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Weather_W_Sc_Post__c</fullName>
        <formula>Airport_Weather_History_W_Post__c * Airport_Weather_History_Sc_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Weather (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_Weighted_Score__c</fullName>
        <formula>Airport_Weather_History_Score__c * Airport_Weather_History_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Weather (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Passports_Sent_to_Operator__c</fullName>
        <label>All Passports Sent to Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Passports_Valid__c</fullName>
        <label>All Passports Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Arrival_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If applicable, what is the alternate arrival airport?</inlineHelpText>
        <label>Alternate Arrival Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Departure_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If applicable, what is the alternate departure airport?</inlineHelpText>
        <label>Alternate Departure Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Applied_to_Deposit__c</fullName>
        <inlineHelpText>The amount that gets taken out of the deposit. Each vendor is different</inlineHelpText>
        <label>Amount Applied to Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_all_passengers_U_S_Citizens__c</fullName>
        <label>Are all passengers U.S. Citizens?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_both_pilots_ATP__c</fullName>
        <label>Are both pilots ATP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arr_Airport_Conga__c</fullName>
        <formula>Arriving_Airport__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arr Airport Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arr_Time_Calc__c</fullName>
        <formula>&apos;&quot;&apos;&amp;TEXT(VALUE( substitute(Arrival_Time_Local__c,&quot;:&quot;,&quot;&quot;) ))&amp;&apos;&quot;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arr Time Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date_del__c</fullName>
        <inlineHelpText>Local arrival date</inlineHelpText>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_Local__c</fullName>
        <inlineHelpText>Military Time (e.g., 03:00, 12:20, 21:30)</inlineHelpText>
        <label>Arrival Time (Local)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_PT__c</fullName>
        <inlineHelpText>4 Digit Military Code with :  eg (03:00 or 12:00). Used for reporting.</inlineHelpText>
        <label>Arrival Time PT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Weather__c</fullName>
        <label>Arrival Weather</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arriving_Airport_Name__c</fullName>
        <formula>Arriving_Airport__r.Airport_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arriving Airport Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arriving_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>4-letter airport code</inlineHelpText>
        <label>Arriving Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AvP_Process_Communications_Comment__c</fullName>
        <label>AvP Process &amp; Communications Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvP_Process_Communications_Score__c</fullName>
        <label>AvP Process &amp; Communications Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backed_Up_Commercially__c</fullName>
        <label>Backed Up Commercially?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Post__c</fullName>
        <label>Backup &amp; Recovery - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Guaranteed Solution (NetJets/Flexjet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2. EJM/National Charter</fullName>
                </value>
                <value>
                    <fullName>3. Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Sc_Post__c</fullName>
        <label>Backup &amp; Recovery (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Score__c</fullName>
        <label>Backup &amp; Recovery (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery_W_Post__c</fullName>
        <defaultValue>0.20</defaultValue>
        <label>Backup &amp; Recovery (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Weight__c</fullName>
        <defaultValue>0.20</defaultValue>
        <label>Backup &amp; Recovery (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery__c</fullName>
        <label>Backup &amp; Recovery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Guaranteed Solution (NetJets/FlexJet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2. EJM/National Charter</fullName>
                </value>
                <value>
                    <fullName>3. Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_W_Sc_Post__c</fullName>
        <formula>Backup_Recovery_W_Post__c  *  Backup_Recovery_Sc_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backup (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Weighted_Score__c</fullName>
        <formula>Backup_Recovery_Score__c * Backup_Recovery_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backup (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Flight_Time_Applied_to_Contract__c</fullName>
        <formula>IF ( TEXT(Flight_Status__c) = &quot;Reconciled&quot;,Billed_Flight_Time__c  -  Hours_Credited__c,
IF ( TEXT(Flight_Status__c) = &quot;Flown&quot;,  Max_Billed_Flight_Time__c ,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billed flight time minus any credited hours</inlineHelpText>
        <label>Billed Flight Time Applied to Contract</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Flight_Time__c</fullName>
        <label>Billed Flight Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Comment__c</fullName>
        <label>Billing Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Error_Description__c</fullName>
        <label>Billing Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Error__c</fullName>
        <label>Billing Error?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Followup_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Followup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Comment__c</fullName>
        <description>AvP Internal Feedback regarding the Broker</description>
        <label>Broker Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <formula>Itinerary_Solution_Number__r.Broker_Contact__r.FirstName &amp; &quot; &quot; &amp;  Itinerary_Solution_Number__r.Broker_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <formula>Itinerary_Solution_Number__r.Broker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Scor__c</fullName>
        <description>AvP Internal Feedback regarding the Broker</description>
        <label>Broker Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions (Business Account)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Passengers__c</fullName>
        <label>Business Passengers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CANPASS_Questions_Provided_to_Operator__c</fullName>
        <inlineHelpText>Only flights to Canada</inlineHelpText>
        <label>CANPASS Questions Provided to Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_State_Tax__c</fullName>
        <label>CA State Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <formula>TEXT(Aircraft_Tail_Number__r.Cabin_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cabin Type</label>
        <type>Text</type>
    </fields>
</CustomObject>